fix: Add missing ROI calculator translation keys for English and Finnish

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -258,6 +258,12 @@
   "pricing.comparison.subtitle": "Compare features across all plans to find the right fit for your business",
   "pricing.faq.title": "Frequently asked questions",
   "pricing.faq.subtitle": "Get answers to the most common questions about our pricing and plans",
+  "pricing.roi.title": "Calculate your ROI",
+  "pricing.roi.subtitle": "See how much you can save with AI-assisted communication",
+  "pricing.roi.teamSize": "Team size",
+  "pricing.roi.people": "people",
+  "pricing.roi.commVolume": "Communication volume",
+  "pricing.roi.messages": "messages/month",
   "pricing.faq.trial.question": "How long is the free trial?",
   "pricing.faq.trial.answer": "All plans include a 14-day free trial with full access to features. No credit card required.",
   "pricing.faq.billing.question": "Can I switch plans at any time?",
