--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -257,6 +257,14 @@
   "pricing.comparisonCaption": "Täydellinen ominaisuusvertailu kaikista paketeista",
   "pricing.comparison.title": "Ominaisuusvertailu",
   "pricing.comparison.subtitle": "Vertaa ominaisuuksia kaikissa paketeissa löytääksesi yrityksellesi sopivan paketin",
+  "pricing.faq.title": "Usein kysytyt kysymykset",
+  "pricing.faq.subtitle": "Saa vastaukset yleisimpiin kysymyksiin hinnoittelusta ja suunnitelmista",
+  "pricing.roi.title": "Laske ROI:si",
+  "pricing.roi.subtitle": "Katso kuinka paljon voit säästää tekoälyavusteisessa viestinnässä",
+  "pricing.roi.teamSize": "Tiimin koko",
+  "pricing.roi.people": "henkilöä",
+  "pricing.roi.commVolume": "Viestintämäärä",
+  "pricing.roi.messages": "viestiä/kk",
 
   "pricing.benefits.title": "Mitattava liiketoimintavaikutus",
   "pricing.benefits.efficiency.title": "Viestinnän tehokkuus",
