fix: Add missing ROI calculator assumption translation keys and fix component variables

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -264,6 +264,11 @@
   "pricing.roi.people": "people",
   "pricing.roi.commVolume": "Communication volume",
   "pricing.roi.messages": "messages/month",
+  "pricing.roi.assumptions": "Key assumptions",
+  "pricing.roi.assumption1": "Average hourly rate: €60 per person",
+  "pricing.roi.assumption2": "Time saved: 2 hours per person per week",
+  "pricing.roi.assumption3": "Professional plan cost: €599/month",
+  "pricing.roi.assumption4": "Savings based on current communication inefficiencies",
   "pricing.faq.trial.question": "How long is the free trial?",
   "pricing.faq.trial.answer": "All plans include a 14-day free trial with full access to features. No credit card required.",
   "pricing.faq.billing.question": "Can I switch plans at any time?",
